fixing details page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -84,13 +84,13 @@
 
  @media screen {
   .navbar{
-    margin: 20px 35px 0px;
+    margin: 20px 20px 0px;
     position: static;
     font-size: 20px;
   }
 
   .tittle{
-    margin: 50px 0px 10px 20px;
+    margin: 50px 0px 10px 35px;
     font-size: 13px;
   }
 
@@ -98,27 +98,28 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    margin: 20px 20px 0px;
+    margin: 20px 40px 0px;
   }
 
   .title {
     margin-top: 0px;
-    margin-left: 0px;
+    margin-left: 15px;
     font-size: 18px;
   }
 
   .title img {
     margin-top: 20px;
-    width: 400px;
+    width: 350px;
     height: 400px;
   }
   
   .more {
     margin-top: 0px;
     margin-bottom: 40px;
+    margin-left: 10px;
     font-size: 20px;
     gap: 10px;
-    width: 400px;
+    width: 350px;
   }
 
   .more p {
